Fix for multi-culture UI issues
Issue is
1.Strings are overlapped in Add FCP Storage devices panel.
2.Strings are overlapped in IPv4 Settings TAB of Interface
3.Strings are overlapped in Administration panel even in full
screen mode

changed css in ginger plugin as a part of this fix.

--- a/ui/css/ginger.css
+++ b/ui/css/ginger.css
@@ -909,6 +909,10 @@
   min-width: 100px !important;
 }
 
+#backupItem > span:hover {
+  overflow: visible;
+}
+
 #network-root-container .accordion {
   margin: 12px 20px 12px 60px;
   padding-bottom: 18px;
@@ -1156,7 +1160,7 @@
 #nw-settings-tabs .bootgrid-table th > .column-header-anchor > .icon,
 #nw-vlan-tabs .bootgrid-table th > .column-header-anchor > .icon,
 #nw-bond-tabs .bootgrid-table th > .column-header-anchor > .icon {
-  right: 40%;
+  right: 4%;
 }
 
 #nw-settings-tabs .bootgrid-table thead,
@@ -1502,7 +1506,7 @@
 #storage-device-content-area .bootgrid-table th > .column-header-anchor > .icon,
 #fcp-tape-devices-content-area .bootgrid-table th > .column-header-anchor > .icon,
 #san-adapter-content-area .bootgrid-table th > .column-header-anchor > .icon {
-  right: 40%;
+  right: 4%;
 }
 
 #volume-groups-content-area .bootgrid-table thead,
@@ -1580,7 +1584,7 @@
 #storage-device-content-area .usage-icon.icon-high,
 #fcp-tape-devices-content-area .usage-icon.icon-high,
 #san-adapter-content-area .usage-icon.icon-high {
-  background-image: url("/images/theme-default/high.png");
+  background-image: url("../images/theme-default/high.png");
 }
 
 #volume-groups-content-area .usage-icon.icon-med,
@@ -1589,7 +1593,7 @@
 #storage-device-content-area .usage-icon.icon-med,
 #fcp-tape-devices-content-area .usage-icon.icon-med,
 #san-adapter-content-area .usage-icon.icon-med {
-  background-image: url("/images/theme-default/med.png");
+  background-image: url("../images/theme-default/med.png");
 }
 
 #volume-groups-content-area .usage-icon.icon-low,
@@ -1598,7 +1602,7 @@
 #storage-device-content-area .usage-icon.icon-low,
 #fcp-tape-devices-content-area .usage-icon.icon-low,
 #san-adapter-content-area .usage-icon.icon-low {
-  background-image: url("/images/theme-default/low.png");
+  background-image: url("../images/theme-default/low.png");
 }
 
 #volume-groups-content-area .dataTable tbody > tr.selected,
