--- a/ui/css/src/modules/_administration.scss
+++ b/ui/css/src/modules/_administration.scss
@@ -626,3 +626,6 @@
       min-width: 100px !important;
   }
 }
+#backupItem > span:hover{
+overflow: visible;
+}
