--- a/ui/css/src/modules/_network.scss
+++ b/ui/css/src/modules/_network.scss
@@ -236,7 +236,7 @@
     width: 99%;
     margin-left: 1%;
     th > .column-header-anchor > .icon {
-      right: 40%;
+      right: 4%;
     }
     thead {
       display: block;
