--- a/ui/css/src/modules/_storage.scss
+++ b/ui/css/src/modules/_storage.scss
@@ -128,7 +128,7 @@
       width:100%;
 
       th > .column-header-anchor > .icon {
-          right:40%
+          right:4%
       }
 
       thead{
